css/dev-grid.less
@import url("settings.less");

.show-grid .inner, .show-grid .footer, .show-grid .lead {
	background-image: repeating-linear-gradient(to top, blue 0, transparent 1px, transparent @line-height);
//	background-image: url("@{base}/img/baseline.png");
}

#dev_grid-toggle {
	color: white;
	position: fixed;
	font-face: "M+ 1p";
	font-size: 0.8em;
	z-index: 5;
	bottom: 0;
	right: 0;
	cursor: pointer;
	padding: 2px 8px;
	background-color: black;
	border-top-left-radius: 5px;
	opacity: 0.5;
	transition: opacity .25s;
}
#dev_grid-toggle:hover {
	opacity: 1;
}

.dev_grid-verticals {
	display: none;
}
.show-grid .dev_grid-verticals {
	display: block;
	overflow: hidden;
	height: 100%;
	position: fixed;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	padding: 0 @line-height;
	z-index: 5000;

	div {
		.columns(1);
		border-right: 1px solid red;
		border-left: 1px solid red;
		height: 100%;
		float: left;
	}
	span {
		border-left: 1px solid purple;
		height: 100%;
		display: block;
		float: left;
		width: 0px;
		content: '';
		margin: -1px;
		padding: 0;
	}
	div:first-child {
		border-left: 1px solid red;
	}
}

